<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".BuyNowActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/purple_default_app_color"
                    android:padding="5dp"
                    android:src="@drawable/baseline_arrow_back_white_24"/>

                <ImageView
                    android:id="@+id/ivMenu"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:visibility="gone"
                    android:src="@drawable/header_logo" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/buy_text"
                    android:layout_margin="5dp"
                    android:textColor="@color/purple_default_app_color"
                    android:textSize="21sp" />

                <ImageView
                    android:id="@+id/ivDial"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/baseline_call_white"
                    android:visibility="invisible"
                    android:tint="@color/purple_default_app_color" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout android:id="@+id/llView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivProduct"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/border_circle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView android:id="@+id/tvProductName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView android:id="@+id/tvProductId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginTop="10dp"
                        android:text="@string/name" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_circle"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:padding="5dp" />

                        <TextView android:id="@+id/tvErrorName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/please_enter_name_text"
                            android:layout_marginTop="5dp"
                            android:visibility="gone"
                            android:textColor="@color/red"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginTop="10dp"
                        android:text="@string/phone" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_circle"
                            android:maxLength="10"
                            android:inputType="number"
                            android:maxLines="1"
                            android:padding="5dp" />

                        <TextView android:id="@+id/tvErrorPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/please_enter_phone"
                            android:layout_marginTop="5dp"
                            android:visibility="gone"
                            android:textColor="@color/red"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginTop="10dp"
                        android:text="@string/email" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_circle"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:padding="5dp" />

                        <TextView android:id="@+id/tvErrorEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/please_enter_email"
                            android:layout_marginTop="5dp"
                            android:visibility="gone"
                            android:textColor="@color/red"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginTop="10dp"
                        android:text="@string/pin_code" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etPinCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_circle"
                            android:maxLines="1"
                            android:inputType="number"
                            android:padding="5dp" />

                        <TextView android:id="@+id/tvErrorPinCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/please_enter_pin_code"
                            android:layout_marginTop="5dp"
                            android:visibility="gone"
                            android:textColor="@color/red"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginBottom="5dp"
                        android:text="@string/address" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_circle"
                            android:maxLines="5"
                            android:inputType="textMultiLine"
                            android:minLines="5"
                            android:lines="8"
                            android:gravity="top|left"
                            android:padding="5dp" />

                        <TextView android:id="@+id/tvErrorAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/please_enter_address"
                            android:layout_marginTop="5dp"
                            android:visibility="gone"
                            android:textColor="@color/red"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:layout_marginTop="10dp"
                    android:text="@string/country" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.6"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup android:id="@+id/rgCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/radIndia" android:checked="true"
                                android:layout_margin="5dp"
                                android:text="@string/country_india">
                            </RadioButton>

                            <RadioButton android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/radOther"
                                android:text="@string/country_other"
                                android:layout_margin="5dp">
                            </RadioButton>

                        </RadioGroup>

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

                <LinearLayout android:id="@+id/llState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginTop="10dp"
                        android:text="@string/state" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/border_circle">

                            <Spinner android:id="@+id/spState"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            </Spinner>

                        </FrameLayout>

                        <TextView android:id="@+id/tvErrorState"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/please_enter_state"
                            android:layout_marginTop="5dp"
                            android:visibility="gone"
                            android:textColor="@color/red"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_default_app_color"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/buy_text"
        android:textSize="18sp"
        android:gravity="center"/>

</LinearLayout>